--- a/css/header-main-footer.css
+++ b/css/header-main-footer.css
@@ -43,8 +43,11 @@ main {
 section {
     height : 100%;
     width  : 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-
 header, footer {
     height      : var(--header-footer-height);
     line-height : var(--header-footer-height);
