--- a/css/index.css
+++ b/css/index.css
@@ -3,9 +3,40 @@ audio {
     width: 100%;
 }
 
-section {
+figure {
+    height: 100%;
+    min-width: 1024px;
+    max-width: 1280px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+aside {
+    width: 220px;
+    height: 100%;
+    min-height: 460px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    overflow-y: auto;
+}
+
+aside ol {
+    padding-left: 18px;
+    font-size: smaller;
+}
+
+aside p {
+    font-size: smaller;
+    font-weight: bold;
+    margin-top: 0;
+}
+
+#player-holder {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
 }
